fix spacing of images

--- a/src/style.scss
+++ b/src/style.scss
@@ -546,10 +546,10 @@ a {
 }
 
 
-@media (min-width: 1400px) {
+@media (min-width: 1200px) {
 	.gallery-section {
 		grid-template-columns: repeat(3, 1fr);
-		column-gap: 4em;
+		column-gap: 3em;
 		margin-top: 2em;
 	}
 
@@ -561,13 +561,13 @@ a {
 	}
 
 	.travel-image, .food-image, .cat-image {
-		width: 10em;
+		width: 9em;
 	}
 
 	.travel-image1, .travel-image2, .travel-image3, .travel-image4, .travel-image5, .travel-image6,
 	.food-image1, .food-image2, .food-image3, .food-image4, .food-image5, .food-image6,
 	.cat-image1, .cat-image2, .cat-image3, .cat-image4, .cat-image5, .cat-image6 {
-		width: 10em;
+		width: 9em;
 	}
 }
 
